--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<link rel="stylesheet" href="assets/css/style.css">
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,12 +32,12 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="generic.html">Desarrollos</a></li>
+								<li><a href="elements.html">Herramientas</a></li>
 								<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li>
 							</ul>
-							<a href="#" class="close">Close</a>
+							<a href="#" class="close">Salir</a>
 						</div>
 					</nav>
 
@@ -124,6 +125,141 @@
 									</ul>
 								</div>
 							</section>
+
+
+						<!-- SECTION SKILLS -->
+
+						<section class="section-skills" id="skills">
+							<div class="container-texts">
+								<h2 class="title">Herramientas</h2>
+								<p class="text-paragraph">Herramientas utilizadas. </p>
+							</div>
+							<div class="container-skills">
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/spring-icon.png" alt="Spring" />
+									<p class="p-titulo-skills">Spring</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/java-icon.png" alt="Java" />
+									<p class="p-titulo-skills">Java</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/react.svg" alt="React" />
+									<p class="p-titulo-skills">React Js</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/hibernate.png" alt="Hibernate" />
+									<p class="p-titulo-skills">Hibernate</p>
+								</div>
+								
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/jhipster-icon.png" width="60px"  alt="JHipster" />
+									<p class="p-titulo-skills" >JHipster</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/mysql.png" width="60px" alt="MySql" />
+									<p class="p-titulo-skills">MySql</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/firebase.svg" alt="Firebase" />
+									<p class="p-titulo-skills">Firebase</p>
+								</div>
+								
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/javascript.svg" alt="JavaScript" />
+									<p class="p-titulo-skills">JavaScript</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/docker-icon.png" alt="Docker" />
+									<p class="p-titulo-skills">Docker</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/html5.svg" alt="HTML5" />
+									<p class="p-titulo-skills">HTML5</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/css3.svg" alt="CSS3" />
+									<p class="p-titulo-skills">CSS3</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/nodejs-icon.png" alt="Node-js" />
+									<p class="p-titulo-skills">Node Js</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/bootstrap.svg" alt="GIT" />
+									<p class="p-titulo-skills">Bootstrap</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/material-ui-1.svg" alt="GIT" />
+									<p class="p-titulo-skills">Material UI</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/aws.png" width="60px" alt="AWS" />
+									<p class="p-titulo-skills">AWS</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/codeigniter.png" alt="CI" />
+									<p class="p-titulo-skills">CodeIgniter</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/git.svg" alt="GIT" />
+									<p class="p-titulo-skills">GIT</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/github.svg" alt="GIT" />
+									<p class="p-titulo-skills">GitHub</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/angularjs.png" width="60px" alt="AngularJS" />
+									<p class="p-titulo-skills">AngularJS</p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/asp.png" width="60px" alt="ASP" />
+									<p class="p-titulo-skills">ASP </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/django-icon.png" width="60px" alt="Django" />
+									<p class="p-titulo-skills">Django </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/visual-studio-code.svg" width="60px" alt="VSCode" />
+									<p class="p-titulo-skills">VS Code </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/sts.png" width="60px" alt="STS" />
+									<p class="p-titulo-skills">STS </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/postman-icon.svg" width="60px" alt="Postman" />
+									<p class="p-titulo-skills">Postman </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/swagger.svg" width="60px" alt="Swagger" />
+									<p class="p-titulo-skills">Swagger </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/netflix oss.png" width="60px" alt="NetflixOSS" />
+									<p class="p-titulo-skills">NetflixOSS </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/android.png" height="60px" width="60px" alt="Android" />
+									<p class="p-titulo-skills">Android </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/gcp.png" width="60px" alt="GCP" />
+									<p class="p-titulo-skills">GCP </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/materializecss.png" width="60px" height="60px" alt="MaterializeCSS" />
+									<p class="p-titulo-skills">MaterializeCSS </p>
+								</div>
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/zuul.png" height="60px" alt="Zuul" />
+									<p class="p-titulo-skills">Zuul </p>
+								</div>
+							</div>
+						</section>
+
 
 					</section>
 
