Class div title actualizada

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 						<section class="section-skills" id="skills">
 							<div class="container-texts">
-								<h2 class="title">Herramientas</h2>
+								<h2 class="major">Herramientas</h2>
 								<p class="text-paragraph">Herramientas utilizadas. </p>
 							</div>
 							<div class="container-skills">
