--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="assets/css/style.css">
-		<title>Portfolio</title>
+		<title>Portfolio Valverde</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>El Software que necesitas</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>Portafolio de actividades <a href="#contacto">Contacto</a></p>
 						</div>
 					</section>
 
@@ -56,11 +56,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic010.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Precisiòn</h2>
+										<p>Registros de informaciòn sensible y recurrente con tecnologia cotidiana.</p>
+										<a href="#" class="special">Saber mas</a>
 									</div>
 								</div>
 							</section>
@@ -68,11 +68,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic020.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Confianza</h2>
+										<p>Herramientas orientadas a un fin, reporte, informe o actividad que facilite la tarea del usuario.</p>
+										<a href="#" class="special">Informate</a>
 									</div>
 								</div>
 							</section>
@@ -80,11 +80,13 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic030.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Devoluciòn</h2>
+										<p>Encuestas, Atenciòn al Cliente, Feed back, 
+											y saber la opinion de todos los participantes
+											 es clave en cualquier organizaciòn.</p>
+										<a href="#" class="special">Conoce màs.</a>
 									</div>
 								</div>
 							</section>
@@ -92,37 +94,41 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Caracteristicas</h2>
+									<p>Cualidades que encontramos. </p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/pic040.jpg" alt="" /></a>
+											<h3 class="major">Interactividad</h3>
+											<p>Todo lo interactivo que pueda ser la aplicaciòn, 
+												es parte de la empatìa que tengamos con nuestros usuarios.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/pic050.jpg" alt="" /></a>
+											<h3 class="major">Humano</h3>
+											<p>El perfil de las ciencias humanas, debe estar presente,
+												en las construcciones q nos interpretan,
+												desde diversas perspectivas.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images/pic060.jpg" alt="" /></a>
+											<h3 class="major">Metologico</h3>
+											<p>Solo los procesos ordenados,
+												nos aseguran llegar a igual destino.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic070.jpg" alt="" /></a>
 											<h3 class="major">Fusce consequat</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
-									<ul class="actions">
+									<!--ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									</ul-->
 								</div>
 							</section>
 
@@ -132,7 +138,7 @@
 						<section class="section-skills" id="skills">
 							<div class="container-texts">
 								<h2 class="major">Herramientas</h2>
-								<p class="text-paragraph">Herramientas utilizadas. </p>
+								<p class="text-paragraph">Herramientas de uso frecuente. </p>
 							</div>
 							<div class="container-skills">
 								<div class="skills">
@@ -257,6 +263,14 @@
 									<img class="img-skills" src="./img/skills/zuul.png" height="60px" alt="Zuul" />
 									<p class="p-titulo-skills">Zuul </p>
 								</div>
+								<!--div class="skills">
+									<img class="img-skills" src="./img/skills/sb.png" height="60px" width="60px" alt="SB" />
+									<p class="p-titulo-skills">Spring Boot</p>
+								</div-->
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/intellij-idea.svg" height="60px" alt="IntelliJ" />
+									<p class="p-titulo-skills">IntelliJ IDEA</p>
+								</div>
 							</div>
 						</section>
 
@@ -266,9 +280,9 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
+							<h2 class="major">Contacto</h2>
+							<p>Envia un email con tus comentarios, dudas y suguerencias. Muchas Gracias.</p>
+							<!--form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -286,21 +300,25 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form--->
 							<ul class="contact">
-								<li class="icon solid fa-home">
+								<!--li class="icon solid fa-home">
 									Untitled Inc<br />
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								</li-->
+								<ol>
+								<!--li class="icon solid fa-phone">(000) 000-0000</li-->
+								<li class="icon solid fa-envelope"><a href="mailto:valverdesistemas@gmail.com">Correo</a></li>
+								<br />
+								<li class="icon brands fa-twitter"><a href="http://twitter.com/TikTok66390060" target="_blank">Twitter</a></li>
+								<!--li class="icon brands fa-linkedin"><a href="#">facebook.com/untitled-tld</a></li-->
+								<li class="icon brands fa-linkedin"><a href="http://linkedin.com/in/valverde-sistemas-53530618a/" target="_blank">Linkedin</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/ValverdeSistemas" target="_blank">GitHub</a></li>
+								</ol>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design Base: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
