Ajustes de imagen.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Desarrollos</a></li>
+								
+								<!--li><a href="generic.html">Desarrollos</a></li>
 								<li><a href="elements.html">Herramientas</a></li>
 								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#">Sign Up</a></li-->
 							</ul>
 							<a href="#" class="close">Salir</a>
 						</div>
@@ -44,7 +45,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="fas fa-table-tennis"></span></div>
 							<h2>El Software que necesitas</h2>
 							<p>Portafolio de actividades <a href="#contacto">Contacto</a></p>
 						</div>
@@ -59,7 +60,9 @@
 									<a href="#" class="image"><img src="images/pic010.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Precisiòn</h2>
-										<p>Registros de informaciòn sensible y recurrente con tecnologia cotidiana.</p>
+										<p>Registros de informaciòn sensible,
+											recurrente o laboral,
+											con tecnologias cotidianas.</p>
 										<a href="#" class="special">Saber mas</a>
 									</div>
 								</div>
@@ -71,7 +74,9 @@
 									<a href="#" class="image"><img src="images/pic020.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Confianza</h2>
-										<p>Herramientas orientadas a un fin, reporte, informe o actividad que facilite la tarea del usuario.</p>
+										<p>Herramientas orientadas a un fin,
+										reporte, informe o actividad que facilite
+										una tarea del usuario.</p>
 										<a href="#" class="special">Informate</a>
 									</div>
 								</div>
@@ -114,15 +119,17 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic060.jpg" alt="" /></a>
-											<h3 class="major">Metologico</h3>
+											<h3 class="major">Metodico</h3>
 											<p>Solo los procesos ordenados,
 												nos aseguran llegar a igual destino.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic070.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Comercial</h3>
+											<p>Las actividades privadas del ambito comercial
+												son beneficiadas por los atributos 
+												que les acercan las tecnologias.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
