Nro de contacto agregado.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<div class="logo"><span class="fas fa-table-tennis"></span></div>
 							<h2>El Software que necesitas</h2>
-							<p>Portafolio de actividades <a href="#contacto">Contacto</a></p>
+							<p>Portafolio de actividades <a href="https://wa.me/59894427914">Contacto</a></p>
 						</div>
 					</section>
 
