--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="assets/css/style.css">
-		<title>Portfolio Valverde</title>
+		<title>Portafolio Valverde</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,8 +46,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="fas fa-table-tennis"></span></div>
-							<h2>El Software que necesitas</h2>
-							<p>Portafolio de actividades <a href="https://wa.me/59894427914">Contacto</a></p>
+							<h2>El Software que se necesita</h2>
+							<p>Portafolio de actividades <a href="https://wa.me/59894427914" target="_blank">Contacto</a></p>
 						</div>
 					</section>
 
@@ -57,10 +57,10 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic010.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic010.jpg" alt="Precision" /></a>
 									<div class="content">
 										<h2 class="major">Precisiòn</h2>
-										<p>Registros de informaciòn sensible,
+										<p>Registros de informaciòn, sensible,
 											recurrente o laboral,
 											con tecnologias cotidianas.</p>
 										<a href="#" class="special">Saber mas</a>
@@ -326,6 +326,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design Base: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><H5>Empujando Cordilleras.</H5></li>
 							</ul>
 						</div>
 					</section>
