--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE HTML>
 <!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Solid State by HTML5 UP / html5up.net | @ajlkn
 -->
 <html>
 	<head>
 		<link rel="stylesheet" href="assets/css/style.css">
-		<title>Portafolio Valverde</title>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<title>Rafael Valverde</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
 	<body class="is-preload">
-
-		<!-- Page Wrapper -->
+			<!-- Page Wrapper -->
 			<div id="page-wrapper">
-
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Desarrollos a Medida</a></h1>
+					<h1><a href="index.html">Desarrollos</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,63 +28,53 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								
-								<!--li><a href="generic.html">Desarrollos</a></li>
-								<li><a href="elements.html">Herramientas</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li-->
+								<li><a href="index.html">Inicio</a></li>
 							</ul>
 							<a href="#" class="close">Salir</a>
 						</div>
 					</nav>
 
-				<!-- Banner -->
+					<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="fas fa-table-tennis"></span></div>
-							<h2>El Software que se necesita</h2>
-							<p>Portafolio de actividades <a href="https://wa.me/59894427914" target="_blank">Contacto</a></p>
+							<h2>Rafael VALVERDE</h2>
+							<p>Programador Java <a href="https://wa.me/59894427914" target="_blank">Contacto</a></p>
 						</div>
 					</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-
-						<!-- One -->
+							<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic010.jpg" alt="Precision" /></a>
 									<div class="content">
 										<h2 class="major">Precisiòn</h2>
-										<p>Registros de informaciòn, sensible,
+										<p>Registros, informaciòn, sensible,
 											recurrente o laboral,
-											con tecnologias cotidianas.</p>
-										<a href="#" class="special">Saber mas</a>
+											en tecnologias cotidianas.</p>
 									</div>
 								</div>
 							</section>
-
-						<!-- Two -->
+							`<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic020.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Confianza</h2>
-										<p>Herramientas orientadas a un fin,
+										<h2 class="major">Enfocado</h2>
+										<p>Desarrollos orientadas a un fin,
 										reporte, informe o actividad que facilite
-										una tarea del usuario.</p>
-										<a href="#" class="special">Informate</a>
+										una tarea del usuario.</p>						
 									</div>
 								</div>
 							</section>
-
-						<!-- Three -->
+							<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic030.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Devoluciòn</h2>
+										<h2 class="major">Retornos</h2>
 										<p>Encuestas, Atenciòn al Cliente, Feed back, 
 											y saber la opinion de todos los participantes
 											 es clave en cualquier organizaciòn.</p>
@@ -95,18 +82,20 @@
 									</div>
 								</div>
 							</section>
-
-						<!-- Four -->
+							<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Caracteristicas</h2>
-									<p>Cualidades que encontramos. </p>
+									<h2 class="major">Orientación</h2>
+									<p>Siendo los Microservecios la unidad minima de desarrollo con sentido,
+										o el ladrillo por excelencia en futuras construcciones, se orientan 
+										los desarrollos en Java, Spring y tecnologias relacionadas a tal fin.
+									</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic040.jpg" alt="" /></a>
-											<h3 class="major">Interactividad</h3>
-											<p>Todo lo interactivo que pueda ser la aplicaciòn, 
-												es parte de la empatìa que tengamos con nuestros usuarios.</p>
+											<a href="#" class="image"><img src="images/pic040.jpg" alt="Interactivo" /></a>
+											<h3 class="major">Interactivo</h3>
+											<p>Todo lo interactivo en la experiencia de usuario, 
+												es parte del sentido de la accion.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
@@ -343,3 +332,4 @@
 
 	</body>
 </html>
+<!-- Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
