--- a/index.html
+++ b/index.html
@@ -96,29 +96,26 @@
 											<h3 class="major">Interactivo</h3>
 											<p>Todo lo interactivo en la experiencia de usuario, 
 												es parte del sentido de la accion.</p>
-											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic050.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic050.jpg" alt="Humano" /></a>
 											<h3 class="major">Humano</h3>
-											<p>El perfil de las ciencias humanas, debe estar presente,
+											<p>El perfil humano,
 												en las construcciones q nos interpretan,
-												desde diversas perspectivas.</p>
-											<a href="#" class="special">Learn more</a>
+												es un gen de solidez en la esencia .</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic060.jpg" alt="" /></a>
 											<h3 class="major">Metodico</h3>
 											<p>Solo los procesos ordenados,
 												nos aseguran llegar a igual destino.</p>
-											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic070.jpg" alt="" /></a>
 											<h3 class="major">Comercial</h3>
-											<p>Las actividades privadas del ambito comercial
-												son beneficiadas por los atributos 
-												que les acercan las tecnologias.</p>
+											<p>Las actividades del ambito comercial
+												se retroalimentan
+												con las tecnologias.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
