--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div id="page-wrapper">
 				<!-- Header -->
 					<header id="header" class="alt">
-					<h1><a href="index.html">Desarrollos</a></h1>
+					<h1><a href="index.html">Java Developer</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -78,7 +78,6 @@
 										<p>Encuestas, Atenciòn al Cliente, Feed back, 
 											y saber la opinion de todos los participantes
 											 es clave en cualquier organizaciòn.</p>
-										<a href="#" class="special">Conoce màs.</a>
 									</div>
 								</div>
 							</section>
@@ -86,7 +85,7 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Orientación</h2>
-									<p>Siendo los Microservecios la unidad minima de desarrollo con sentido,
+									<p>Siendo los Microservecios la unidad minima de desarrollo con sentido global,
 										o el ladrillo por excelencia en futuras construcciones, se orientan 
 										los desarrollos en Java, Spring y tecnologias relacionadas a tal fin.
 									</p>
@@ -116,18 +115,12 @@
 											<p>Las actividades del ambito comercial
 												se retroalimentan
 												con las tecnologias.</p>
-											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
-									<!--ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul-->
 								</div>
 							</section>
 
-
 						<!-- SECTION SKILLS -->
-
 						<section class="section-skills" id="skills">
 							<div class="container-texts">
 								<h2 class="major">Herramientas</h2>
@@ -256,56 +249,30 @@
 									<img class="img-skills" src="./img/skills/zuul.png" height="60px" alt="Zuul" />
 									<p class="p-titulo-skills">Zuul </p>
 								</div>
-								<!--div class="skills">
-									<img class="img-skills" src="./img/skills/sb.png" height="60px" width="60px" alt="SB" />
+								<div class="skills">
+									<img class="img-skills" src="./img/skills/springboot.png" height="60px" width="60px" alt="SB" />
 									<p class="p-titulo-skills">Spring Boot</p>
-								</div-->
+								</div>
 								<div class="skills">
 									<img class="img-skills" src="./img/skills/intellij-idea.svg" height="60px" alt="IntelliJ" />
 									<p class="p-titulo-skills">IntelliJ IDEA</p>
 								</div>
 							</div>
 						</section>
-
-
 					</section>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Contacto</h2>
-							<p>Envia un email con tus comentarios, dudas y suguerencias. Muchas Gracias.</p>
-							<!--form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form--->
+							<p>Envia un email con tus comentarios, dudas y suguerencias. 
+								<small> Muchas Gracias.</small></p>
 							<ul class="contact">
-								<!--li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li-->
 								<ol>
-								<!--li class="icon solid fa-phone">(000) 000-0000</li-->
+								<li class="icon solid fa-phone">(598) 92307002</li-->
 								<li class="icon solid fa-envelope"><a href="mailto:valverdesistemas@gmail.com">Correo</a></li>
 								<br />
 								<li class="icon brands fa-twitter"><a href="http://twitter.com/TikTok66390060" target="_blank">Twitter</a></li>
-								<!--li class="icon brands fa-linkedin"><a href="#">facebook.com/untitled-tld</a></li-->
 								<li class="icon brands fa-linkedin"><a href="http://linkedin.com/in/valverde-sistemas-53530618a/" target="_blank">Linkedin</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/ValverdeSistemas" target="_blank">GitHub</a></li>
 								</ol>
@@ -316,7 +283,6 @@
 							</ul>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Scripts -->
@@ -326,7 +292,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
 <!-- Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
