Ortografia faltas corregidas

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Orientación</h2>
-									<p>Siendo los Microservecios la unidad minima de desarrollo con sentido global,
+									<p>Siendo microservicios la unidad minima de desarrollo con sentido global,
 										o el ladrillo por excelencia en futuras construcciones, se orientan 
-										los desarrollos en Java, Spring y tecnologias relacionadas a tal fin.
+										y ponderan los desarrollos en Java, Spring y tecnologias relacionadas a tal fin.
 									</p>
 									<section class="features">
 										<article>
