Ajuste nombre de Herramientas

--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 								</div>
 								<div class="skills">
 									<img class="img-skills" src="./img/skills/springboot.png" height="60px" width="60px" alt="SB" />
-									<p class="p-titulo-skills">Spring Boot</p>
+									<p class="p-titulo-skills">S. Boot</p>
 								</div>
 								<div class="skills">
 									<img class="img-skills" src="./img/skills/intellij-idea.svg" height="60px" alt="IntelliJ" />
-									<p class="p-titulo-skills">IntelliJ IDEA</p>
+									<p class="p-titulo-skills">IntelliJ</p>
 								</div>
 							</div>
 						</section>
