--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<section class="section-skills" id="skills">
 							<div class="container-texts">
 								<h2 class="major">Herramientas</h2>
-								<p class="text-paragraph">Herramientas de uso frecuente. </p>
+								<p class="text-paragraph">Herramientas afines. </p>
 							</div>
 							<div class="container-skills">
 								<div class="skills">
